--- a/Practice1/Practice1.vcxproj
+++ b/Practice1/Practice1.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Practice1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Practice1.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
